--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
 		"test": "node ./out/test/runTest.js"
 	},
 	"devDependencies": {
+		"@commitlint/cli": "^8.3.5",
+		"@commitlint/config-conventional": "^8.3.4",
 		"@types/glob": "^7.1.1",
 		"@types/mocha": "^7.0.2",
 		"@types/node": "^13.11.0",
@@ -40,8 +42,19 @@
 		"eslint-config-airbnb-typescript": "^7.2.1",
 		"eslint-plugin-import": "^2.20.2",
 		"glob": "^7.1.6",
+		"husky": "^4.2.5",
 		"mocha": "^7.1.2",
 		"typescript": "^3.8.3",
 		"vscode-test": "^1.3.0"
+	},
+	"commitlint": {
+		"extends": [
+			"@commitlint/config-conventional"
+		]
+	},
+	"husky": {
+		"hooks": {
+			"commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+		}
 	}
 }
