--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"displayName": "bundler",
 	"description": "Support for viewing and opening Ruby Bundler dependencies",
 	"publisher": "mbreit",
+	"private": true,
 	"version": "0.0.1",
 	"engines": {
 		"vscode": "^1.45.0"
