--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
 		"@types/glob": "^7.1.1",
 		"@types/mocha": "^7.0.2",
 		"@types/node": "^14.0.1",
-		"@types/vscode": "^1.45.1",
+		"@types/vscode": "1.45.0",
 		"@typescript-eslint/eslint-plugin": "^2.33.0",
 		"@typescript-eslint/parser": "^2.33.0",
 		"eslint": "^7.0.0",
