feat: add bundle open command
Co-authored-by: aviav <8aviav@gmail.com>

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 	"repository": "https://github.com/mbreit/vscode-bundler",
 	"activationEvents": [
 		"onCommand:bundler.bundleInstall",
-		"onCommand:bundler.bundleOutdated"
+		"onCommand:bundler.bundleOutdated",
+		"onCommand:bundler.bundleOpen"
 	],
 	"main": "./out/extension.js",
 	"contributes": {
@@ -26,6 +27,10 @@
 			{
 				"command": "bundler.bundleOutdated",
 				"title": "Bundle outdated"
+			},
+			{
+				"command": "bundler.bundleOpen",
+				"title": "Bundle open"
 			}
 		],
 		"configuration": {
