feat: add bundle dependencies tree view
Fixes #9 - Treeview with dependencies

--- a/package.json
+++ b/package.json
@@ -29,6 +29,14 @@
 				"title": "Bundle outdated"
 			}
 		],
+		"views": {
+			"explorer": [
+				{
+					"id": "bundler.bundlerDependencies",
+					"name": "Bundler Dependencies"
+				}
+			]
+		},
 		"configuration": {
 			"title": "Bundler",
 			"properties": {
