chore: set editor ruler to 100 in vscode settings
This is the allowed line length in our eslint config.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,7 @@
     // Turn off tsc task auto detection since we have the necessary tasks as npm scripts
     "typescript.tsc.autoDetect": "off",
     // Always use npm instead of yarn in this project
-    "npm.packageManager": "npm"
+    "npm.packageManager": "npm",
+    // We use a maximum line length of 100 characters
+    "editor.rulers": [100]
 }
