fix: activate extension on reloadDependencies command

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	"activationEvents": [
 		"onCommand:bundler.bundleInstall",
 		"onCommand:bundler.bundleOutdated",
+		"onCommand:bundler.reloadDependencies",
 		"workspaceContains:**/Gemfile"
 	],
 	"main": "./out/extension.js",
