chore: fix warning about relative images in README.md

--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
 	"categories": [
 		"Other"
 	],
-	"repository": "https://github.com/mbreit/vscode-bundler",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/mbreit/vscode-bundler"
+	},
 	"activationEvents": [
 		"onCommand:bundler.bundleInstall",
 		"onCommand:bundler.bundleOutdated",
