--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
 		"lint": "eslint src --ext ts",
 		"watch": "tsc -watch -p ./",
 		"pretest": "npm run compile && npm run lint",
-		"test": "node ./out/test/runTest.js"
+		"test": "node ./out/test/runTest.js",
+		"release": "standard-version"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^8.3.5",
@@ -62,6 +63,7 @@
 		"glob": "^7.1.6",
 		"husky": "^4.2.5",
 		"mocha": "^7.1.2",
+		"standard-version": "^8.0.0",
 		"typescript": "^3.9.2",
 		"vscode-test": "^1.3.0"
 	},
@@ -73,6 +75,11 @@
 	"husky": {
 		"hooks": {
 			"commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+		}
+	},
+	"standard-version": {
+		"scripts": {
+			"postchangelog": "sed 's/### \\[/## [/g' -i CHANGELOG.md"
 		}
 	}
 }
