--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"watch": "tsc -watch -p ./",
 		"pretest": "npm run compile && npm run lint",
 		"test": "node ./out/test/runTest.js",
+		"package": "vsce package",
 		"release": "standard-version"
 	},
 	"devDependencies": {
@@ -65,6 +66,7 @@
 		"mocha": "^7.1.2",
 		"standard-version": "^8.0.0",
 		"typescript": "^3.9.2",
+		"vsce": "^1.75.0",
 		"vscode-test": "^1.3.0"
 	},
 	"commitlint": {
