--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
 	"categories": [
 		"Other"
 	],
-	"repository": "https://github.com/mbreit/vscode-bundler",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/mbreit/vscode-bundler"
+	},
 	"activationEvents": [
 		"onCommand:bundler.bundleInstall",
-		"onCommand:bundler.bundleOutdated"
+		"onCommand:bundler.bundleOutdated",
+		"onCommand:bundler.reloadDependencies",
+		"workspaceContains:**/Gemfile"
 	],
 	"main": "./out/extension.js",
 	"contributes": {
@@ -26,8 +31,30 @@
 			{
 				"command": "bundler.bundleOutdated",
 				"title": "Bundle outdated"
+			},
+			{
+				"command": "bundler.reloadDependencies",
+				"title": "Reload Bundler dependencies",
+				"icon": "$(refresh)"
 			}
 		],
+		"views": {
+			"explorer": [
+				{
+					"id": "bundler.bundlerDependencies",
+					"name": "Bundler Dependencies"
+				}
+			]
+		},
+		"menus": {
+			"view/title": [
+				{
+					"command": "bundler.reloadDependencies",
+					"when": "view == bundler.bundlerDependencies",
+					"group": "navigation"
+				}
+			]
+		},
 		"configuration": {
 			"title": "Bundler",
 			"properties": {
@@ -35,6 +62,11 @@
 					"type": "string",
 					"default": "bundle",
 					"description": "Path to Bundler executable"
+				},
+				"bundler.rubyPath": {
+					"type": "string",
+					"default": "ruby",
+					"description": "Path to ruby executable"
 				}
 			}
 		}
