--- a/package.json
+++ b/package.json
@@ -49,6 +49,12 @@
 				"title": "Open gem in new window",
 				"icon": "$(multiple-windows)",
 				"category": "Bundler"
+			},
+			{
+				"command": "bundler.addGemToWorkspace",
+				"title": "Add gem folder to the current workspace",
+				"icon": "$(file-submodule)",
+				"category": "Bundler"
 			}
 		],
 		"views": {
@@ -77,6 +83,10 @@
 				{
 					"command": "bundler.openGem",
 					"when": "bundler:hasGemfile"
+				},
+				{
+					"command": "bundler.addGemToWorkspace",
+					"when": "bundler:hasGemfile"
 				}
 			],
 			"view/title": [
@@ -95,7 +105,12 @@
 				{
 					"command": "bundler.openGem",
 					"when": "view == bundler.bundlerDependencies && viewItem == dependency.resolved",
-					"group": "inline"
+					"group": "bundler@1"
+				},
+				{
+					"command": "bundler.addGemToWorkspace",
+					"when": "view == bundler.bundlerDependencies && viewItem == dependency.resolved",
+					"group": "bundler@2"
 				}
 			]
 		},
